kubernetes/jenkins/jenkins-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
spec:
  template:
    metadata:
      labels:
        name: jenkins-pod
    spec:
      containers:
        - name: jenkins
          image: jenkins:2.60.3-alpine
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: volume-jenkins
              mountPath: /var/jenkins_home
      volumes:
        - name: volume-jenkins
          persistentVolumeClaim:
            claimName: jenkins-persistentvolumeclaim
