kubernetes/jenkins/jenkins-pod.yml
apiVersion: apps/v1beta1
kind: Pod
metadata:
  name: jenkins-pod
spec:
  containers:
    - name: jenkins
      image: jenkins:2.60.3-alpine
      ports:
        - containerPort: 8080
        - containerPort: 50000
