kubernetes/jenkins/jenkins-statefulset.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-statefulset
  namespace: jenkins
  labels:
    app: jenkins
spec:
  serviceName: jenkins-service
  replicas: 1
  template:
    metadata:
      labels:
        name: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins:2.60.3-alpine
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-volume
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-volume
          persistentVolumeClaim:
            claimName: jenkins-persistentvolumeclaim
