kubernetes/jenkins/jenkins-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    name: jenkins-pod
