kubernetes/jenkins/jenkins-service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    name: jenkins-pod
