kubernetes/jenkins/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slave
  selector:
    name: jenkins-pod
